// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tile ad huge 1`] = `
<style>
.IS1 {
  margin-bottom: 0px;
}

.IS2 {
  color: #333333;
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 5;
  font-size: 22;
  line-height: 22px;
}

.IS3 {
  color: inherit;
  font: inherit;
  white-space: inherit;
}

.IS4 {
  color: #696969;
  flex-wrap: wrap;
  margin-bottom: 10px;
  font-family: TimesDigitalW04;
  font-size: 14;
  line-height: 20px;
  margin-top: 5;
}

.IS5 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
}
</style>

<Link
  linkStyle={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "padding": "10px",
    }
  }
  url="/article/123"
>
  <div
    className="css-view-1dbjc4n IS5"
  >
    <div
      className="css-view-1dbjc4n"
    >
      <div
        className="tc-view__TcView-nuazoi-0 fPjBcr"
      >
        <div
          className="tc-view__TcView-nuazoi-0 fPjBcr IS1"
        >
          <ArticleLabel
            color="#005B8D"
            isVideo={false}
            title="label"
          />
        </div>
        <div
          aria-level="3"
          className="tc-text__TcText-sc-15igzev-0 lhcAkf IS2"
          role="heading"
        >
          This is tile headline
        </div>
        <div
          className="tc-text__TcText-sc-15igzev-0 lhcAkf IS4"
        >
          <div
            className="tc-text__TcText-sc-15igzev-0 lhcAkf IS3"
          >
            
            ‘The prodigal son returns.” So read a banner tied to the wall of the Paul Strank Stand at Kingsmeadow, the home of AFC Wimbledon, on Saturday, alongside the sepia-toned image of a fresh-faced Wally Downes, sporting an 80s haircut and Wimbledon strip, with a mischievous glint in his eye.
            ...
          </div>
        </div>
        <ArticleFlags
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
          longRead={true}
        />
      </div>
    </div>
  </div>
</Link>
`;

exports[`tile ad medium 1`] = `
<style>
.IS1 {
  margin-bottom: 0px;
}

.IS2 {
  color: #333333;
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 5;
  font-size: 20;
  line-height: 20px;
}

.IS3 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
}
</style>

<Link
  linkStyle={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "padding": "10px",
    }
  }
  url="/article/123"
>
  <div
    className="css-view-1dbjc4n IS3"
  >
    <div
      className="css-view-1dbjc4n"
    >
      <div
        className="tc-view__TcView-nuazoi-0 fPjBcr"
      >
        <div
          className="tc-view__TcView-nuazoi-0 fPjBcr IS1"
        >
          <ArticleLabel
            color="#005B8D"
            isVideo={false}
            title="label"
          />
        </div>
        <div
          aria-level="3"
          className="tc-text__TcText-sc-15igzev-0 lhcAkf IS2"
          role="heading"
        >
          This is tile headline
        </div>
        <ArticleFlags
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
          longRead={true}
        />
      </div>
    </div>
  </div>
</Link>
`;

exports[`tile ad wide 1`] = `
<style>
.IS1 {
  margin-bottom: 0px;
}

.IS2 {
  color: #333333;
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 5;
  font-size: 20;
  line-height: 20px;
}

.IS3 {
  color: inherit;
  font: inherit;
  white-space: inherit;
}

.IS4 {
  color: #696969;
  flex-wrap: wrap;
  margin-bottom: 10px;
  font-family: TimesDigitalW04;
  font-size: 14;
  line-height: 20px;
  margin-top: 5;
}

.IS5 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
}
</style>

<Link
  linkStyle={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "padding": "10px",
    }
  }
  url="/article/123"
>
  <div
    className="css-view-1dbjc4n IS5"
  >
    <div
      className="css-view-1dbjc4n"
    >
      <div
        className="tc-view__TcView-nuazoi-0 fPjBcr"
      >
        <div
          className="tc-view__TcView-nuazoi-0 fPjBcr IS1"
        >
          <ArticleLabel
            color="#005B8D"
            isVideo={false}
            title="label"
          />
        </div>
        <div
          aria-level="3"
          className="tc-text__TcText-sc-15igzev-0 lhcAkf IS2"
          role="heading"
        >
          This is tile headline
        </div>
        <div
          className="tc-text__TcText-sc-15igzev-0 lhcAkf IS4"
        >
          <div
            className="tc-text__TcText-sc-15igzev-0 lhcAkf IS3"
          >
            
            ‘The prodigal son returns.” So read a banner tied to the wall of the Paul Strank Stand at Kingsmeadow, the home of AFC Wimbledon, on Saturday, alongside the sepia-toned image of a fresh-faced Wally Downes, sporting an 80s haircut and Wimbledon strip, with a mischievous glint in his eye.
            ...
          </div>
        </div>
        <ArticleFlags
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
          longRead={true}
        />
      </div>
    </div>
  </div>
</Link>
`;

exports[`tile ad without breakpoint should be like medium 1`] = `
<style>
.IS1 {
  margin-bottom: 0px;
}

.IS2 {
  color: #333333;
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 5;
  font-size: 20;
  line-height: 20px;
}

.IS3 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
}
</style>

<Link
  linkStyle={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "padding": "10px",
    }
  }
  url="/article/123"
>
  <div
    className="css-view-1dbjc4n IS3"
  >
    <div
      className="css-view-1dbjc4n"
    >
      <div
        className="tc-view__TcView-nuazoi-0 fPjBcr"
      >
        <div
          className="tc-view__TcView-nuazoi-0 fPjBcr IS1"
        >
          <ArticleLabel
            color="#005B8D"
            isVideo={false}
            title="label"
          />
        </div>
        <div
          aria-level="3"
          className="tc-text__TcText-sc-15igzev-0 lhcAkf IS2"
          role="heading"
        >
          This is tile headline
        </div>
        <ArticleFlags
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
          longRead={true}
        />
      </div>
    </div>
  </div>
</Link>
`;
